LPS-166050 LPS-164684 portal-language-lang: gradlew buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=يمكن تعيين القنوات إلى منشأة و
 chapter=فصل
 chapters=فصول
 character-options=خيارات الحروف
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=حد الحرف لعرض الاقتراحات
 characters=الحروف
 characters-blacklist=قائمة الأحرف السوداء
