--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Kanäle können immer nur einer Eigenschaft zugewiesen 
 chapter=Kapitel
 chapters=Kapitel
 character-options=Zeichenoptionen
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Zeichenschwellenwert für die Anzeige von Vorschlägen
 characters=Zeichen
 characters-blacklist=Zeichen-Blacklist
