--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Kanavia voi määrittää vain yhdelle ominaisuudelle k
 chapter=Kappale
 chapters=Kappaleet
 character-options=Merkkivalinnat
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Merkkiraja ehdotusten näyttämiselle
 characters=Merkit
 characters-blacklist=Merkkien Musta Lista
