--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Les canaux ne peuvent être attribués qu'à une seule 
 chapter=Chapitre
 chapters=Chapitres
 character-options=Options de caractère
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Seuil de caractères pour l'affichage des suggestions
 characters=Caractères
 characters-blacklist=Liste noire des caractères
