--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=A csatornák egyszerre csak egy tulajdonsághoz rendelh
 chapter=Fejezet
 chapters=Fejezetek
 character-options=Karakterek lehetőségei
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=A javaslatok megjelenítésének karakter-küszöbértéke
 characters=Karakterek
 characters-blacklist=Karakterek feketelistája
