--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3053,6 +3053,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=Capitolo
 chapters=Capitoli
 character-options=Opzioni carattere (Automatic Translation)
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Personaggi Lista nera (Automatic Translation)
