--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=지부
 chapters=지부
 character-options=문자 옵션
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=제안 표시를 위한 문자 기준값
 characters=Characters (Automatic Copy)
 characters-blacklist=문자 블랙리스트
