--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Aan kanalen kan slechts één eigenschap tegelijk worde
 chapter=Hoofdstuk
 chapters=Hoofdstukken
 character-options=Tekenopties
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Tekenlimiet voor het weergeven van suggesties
 characters=Tekens
 characters-blacklist=Zwarte lijst tekens
