--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Canais só podem ser atribuídos a uma única proprieda
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opções de caracteres
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Limite de caracteres para a exibição de sugestões
 characters=Caracteres
 characters-blacklist=Lista de bloqueios de caracteres
