--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Kanaler kan bara tilldelas till en resurs åt gången. 
 chapter=Kapitel
 chapters=Kapitel
 character-options=Teckenalternativ
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Tröskelvärde för tecken för att visa förslag
 characters=Tecken
 characters-blacklist=Svartlista för tecken
