--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=บท
 chapters=บท
 character-options=ตัวเลือกตัวอักษร
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=เกณฑ์การวัดตัวอักษรเพื่อแสดงคำแนะนำ
 characters=Characters (Automatic Copy)
 characters-blacklist=ความประพฤติบัญชีดำ
