--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Els canals només es poden assignar a una sola propieta
 chapter=Capítol
 chapters=Capítols
 character-options=Opcions de caràcters
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Límit de caràcters per mostrar suggeriments
 characters=Caràcters
 characters-blacklist=Llista negra de caràcters
