--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=Κεφάλαιο
 chapters=Κεφάλαια
 character-options=Επιλογές χαρακτήρων (Automatic Translation)
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Χαρακτήρες Μαύρη λίστα (Automatic Translation)
