--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opciones de caracteres
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Umbral de caracteres para mostrar sugerencias
 characters=Caracteres
 characters-blacklist=Lista negra de caracteres
