--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -3054,6 +3054,7 @@ channels-tab-description=Channels can only be assigned to a single property at a
 chapter=Rozdział
 chapters=Rozdziały
 character-options=Opcje znaków (Automatic Translation)
+character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Czarne listy postaci (Automatic Translation)
