LPS-170171 portal-language-lang: buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -16686,6 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=El fitxer seleccionat no és un fitxer
 the-selected-form-no-longer-exists=El formulari seleccionat ja no existeix.
 the-selected-image-was-deleted=La imatge seleccionada s'ha suprimit.
 the-selected-image-was-moved-to-the-recycle-bin=La imatge seleccionada s'ha desplaçat a la paperera de reciclatge.
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=La llicència seleccionada és utilitzada per almenys un producte.
 the-selected-list-no-longer-exists=La llista seleccionada ja no existeix.
 the-selected-menu-does-not-exist=El menú seleccionat no existeix.
