--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Den valgte fil er ikke en gyldig ZIP-f
 the-selected-form-no-longer-exists=Den valgte formular findes ikke længere. (Automatic Translation)
 the-selected-image-was-deleted=Det markerede billede blev slettet. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Det markerede billede blev flyttet til papirkurven. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=The selected license is used by at least one product. (Automatic Copy)
 the-selected-list-no-longer-exists=The selected list no longer exists. (Automatic Copy)
 the-selected-menu-does-not-exist=Den valgte menu findes ikke. (Automatic Translation)
