--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Το επιλεγμένο αρχείο
 the-selected-form-no-longer-exists=Η επιλεγμένη φόρμα δεν υπάρχει πλέον. (Automatic Translation)
 the-selected-image-was-deleted=Η επιλεγμένη εικόνα διαγράφηκε. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Η επιλεγμένη εικόνα μεταφέρθηκε στον Κάδο Ανακύκλωσης. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Η επιλεγμένη άδεια χρησιμοποιείται από τουλάχιστον ένα προϊόν.
 the-selected-list-no-longer-exists=Ο επιλεγμένος κατάλογος δεν υπάρχει πλέον.
 the-selected-menu-does-not-exist=Το επιλεγμένο μενού δεν υπάρχει. (Automatic Translation)
