--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=The selected file is not a valid ZIP f
 the-selected-form-no-longer-exists=The selected form no longer exists. (Automatic Copy)
 the-selected-image-was-deleted=Aukeratutako irudia ezabatu da.
 the-selected-image-was-moved-to-the-recycle-bin=Aukeratutako irudia zakarrontzira mugitu da.
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Aukeratutako lizentzia gutxienez produktu batetan erabilia da.
 the-selected-list-no-longer-exists=Hautatutako zerrenda jadanik ez da existitzen.
 the-selected-menu-does-not-exist=The selected menu does not exist. (Automatic Copy)
