--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=پرونده انتخاب شده یک 
 the-selected-form-no-longer-exists=فرم انتخابی وجود ندارد.
 the-selected-image-was-deleted=تصویر انتخاب شده حذف شد. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=تصویر انتخاب شده به سطل بازیافت منتقل شد. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=لیسانس اتتخاب شده حداقل توسط یک محصول استفاده می‌شود
 the-selected-list-no-longer-exists=فهرست انتخابی ووجود ندارد.
 the-selected-menu-does-not-exist=منوی انتخاب شده وجود ندارد. (Automatic Translation)
