--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -16682,6 +16682,7 @@ the-selected-file-is-not-a-valid-zip-file=Valittu tiedosto ei ole kelvollinen ZI
 the-selected-form-no-longer-exists=Valittua lomaketta ei ole olemassa
 the-selected-image-was-deleted=Valittu kuva on poistettu.
 the-selected-image-was-moved-to-the-recycle-bin=Valittu kuva on siirretty Roskakoriin.
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Valittua lisenssiä käyttää ainakin yksi tuote.
 the-selected-list-no-longer-exists=Valittulista ei ole enää olemassa.
 the-selected-menu-does-not-exist=Valittua valikkoa ei ole olemassa.
