--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -16685,6 +16685,7 @@ the-selected-file-is-not-a-valid-zip-file=Il file selezionato non è un file zip
 the-selected-form-no-longer-exists=Il form selezionato non esiste più.
 the-selected-image-was-deleted=L'immagine selezionata è stata eliminata. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=L'immagine selezionata è stata spostata nel Cestino. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=La licenza selezionata è usata da almeno un prodotto.
 the-selected-list-no-longer-exists=Il contenuto selezionato non esiste più.
 the-selected-menu-does-not-exist=Il menu selezionato non esiste. (Automatic Translation)
