--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -16686,6 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=選択したファイルは有効な Z
 the-selected-form-no-longer-exists=選択されたフォームは存在しません
 the-selected-image-was-deleted=選択した画像は削除されました。
 the-selected-image-was-moved-to-the-recycle-bin=選択した画像はゴミ箱に移動されました。
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=選択されたライセンスは、少なくとも１つのプロダクトに使用されています。
 the-selected-list-no-longer-exists=選択されたリストは存在しません。
 the-selected-menu-does-not-exist=選択したメニューは存在しません。
