--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Pasirinktas failas nėra tinkamas ZIP 
 the-selected-form-no-longer-exists=Pasirinktos formos nebėra. (Automatic Translation)
 the-selected-image-was-deleted=Pasirinktas vaizdas panaikintas. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Pasirinktas vaizdas buvo perkeltas į šiukšlinę. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Pasirinktą licenciją naudoja bent vienas produktas. (Automatic Translation)
 the-selected-list-no-longer-exists=Pasirinkto sąrašo nebėra. (Automatic Translation)
 the-selected-menu-does-not-exist=Pasirinkto meniu nėra. (Automatic Translation)
