--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Wybrany plik nie jest prawidłowym pli
 the-selected-form-no-longer-exists=Wybrany formularz już nie istnieje. (Automatic Translation)
 the-selected-image-was-deleted=Wybrany obraz został usunięty. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Wybrany obraz został przeniesiony do Kosza. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Wybrana licencja jest używana co najmniej przez jeden produkt.
 the-selected-list-no-longer-exists=Wybrana lista już nie istnieje.
 the-selected-menu-does-not-exist=Wybrane menu nie istnieje. (Automatic Translation)
