--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Fișierul selectat nu este un fișier 
 the-selected-form-no-longer-exists=Formularul selectat nu mai există. (Automatic Translation)
 the-selected-image-was-deleted=Imaginea selectată a fost ștearsă. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Imaginea selectată a fost mutată în Coșul de reciclare. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Licența selectată este utilizată de cel puțin un produs. (Automatic Translation)
 the-selected-list-no-longer-exists=Continutul web selectat nu mai exista.
 the-selected-menu-does-not-exist=Meniul selectat nu există. (Automatic Translation)
