--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Vybratý súbor nie je platným súbor
 the-selected-form-no-longer-exists=Vybraný formulár už neexistuje.
 the-selected-image-was-deleted=Vybratý obrázok bol odstránený. (Automatic Translation)
 the-selected-image-was-moved-to-the-recycle-bin=Vybratý obrázok bol presunutý do Koša. (Automatic Translation)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Vybraná licencia je použitá s najmenej jedným produktom.
 the-selected-list-no-longer-exists=Zvolený zoznam už neexistuje.
 the-selected-menu-does-not-exist=Vybratá ponuka neexistuje. (Automatic Translation)
