--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=Den valda filen är inte en giltig ZIP
 the-selected-form-no-longer-exists=Det valda formuläret finns inte längre.
 the-selected-image-was-deleted=Den valda bilden har tagits bort.
 the-selected-image-was-moved-to-the-recycle-bin=Den valda bilden har flyttats till papperskorgen.
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Den valda licensen används av minst en produkt.
 the-selected-list-no-longer-exists=Den valda listan existerar inte längre.
 the-selected-menu-does-not-exist=Den valda menyn finns inte.
