--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -16685,6 +16685,7 @@ the-selected-file-is-not-a-valid-zip-file=選定的檔案不是有效的 ZIP 檔
 the-selected-form-no-longer-exists=被選擇表單不存在。
 the-selected-image-was-deleted=所選的圖片已經被刪除。
 the-selected-image-was-moved-to-the-recycle-bin=所選的圖片已經被移至資源回收桶。
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=選擇的授權被使用在至少一個產品。
 the-selected-list-no-longer-exists=選擇的名單不再存在。
 the-selected-menu-does-not-exist=選定的選單不存在。
