--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -16686,6 +16686,7 @@ the-selected-file-is-not-a-valid-zip-file=Die ausgewählte Datei ist keine gült
 the-selected-form-no-longer-exists=Das ausgewählte Formular existiert nicht mehr.
 the-selected-image-was-deleted=Das ausgewählte Bild wurde gelöscht.
 the-selected-image-was-moved-to-the-recycle-bin=Das ausgewählte Bild wurde in den Papierkorb verschoben.
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=Die gewählte Lizenz wird von mindestens einem Produkt verwendet.
 the-selected-list-no-longer-exists=Die ausgewählte Liste gibt es nicht mehr.
 the-selected-menu-does-not-exist=Das ausgewählte Menü existiert nicht.
