--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -16684,6 +16684,7 @@ the-selected-file-is-not-a-valid-zip-file=The selected file is not a valid ZIP f
 the-selected-form-no-longer-exists=தேர்ந்தெடுக்கப்பட்ட படிவம் இனி இல்லை.
 the-selected-image-was-deleted=The selected image was deleted. (Automatic Copy)
 the-selected-image-was-moved-to-the-recycle-bin=The selected image was moved to the Recycle Bin. (Automatic Copy)
+the-selected-knowledge-base-is-empty=The selected Knowledge Base is empty. (Automatic Copy)
 the-selected-license-is-used-by-at-least-one-product=தேர்ந்தெடுக்கப்பட்ட உரிமம் குறைந்தபட்சம் ஒரு தயாரிப்பு மூலம் பயன்படுத்தப்படுகிறது.
 the-selected-list-no-longer-exists=தேர்ந்தெடுத்த பட்டியல் இனி இருக்காது.
 the-selected-menu-does-not-exist=தேர்ந்தெடுக்கப்பட்ட மெனு இல்லை.
